@@ -1,7 +1,7 @@
 [tox]
 skip_missing_interpreters=true
 envlist =
-    py{39,310,311,312,313,py3},mypy-test
+    py{39,310,311,312,313,py3},mypy-check
 isolated_build = True
 
 [testenv]
@@ -16,8 +16,6 @@ allowlist_externals =
     python
 
 
-[testenv:mypy-test]
+[testenv:mypy-check]
 deps = mypy==1.11.2
-# note: cd to tests/ to avoid mypy trying to check pyparsing (which fails)
-changedir = tests
-commands = mypy --show-error-codes --warn-unused-ignores mypy-ignore-cases/
+commands = mypy --show-error-codes --warn-unused-ignores pyparsing
